--- a/GioHang.html
+++ b/GioHang.html
@@ -122,8 +122,9 @@
                         <th>Số lượng</th>
                         <th>Tổng tiền</th>
                     </tr>
-                    <tr id="gioHang">
-                    </tr>
+                    <tbody id="gioHang">
+
+                    </tbody>
                 </table>
 
             </div>
