--- a/index.HTML
+++ b/index.HTML
@@ -228,7 +228,7 @@
                         </a>
                         <Div class="Gia">
                             <a href="ChiTiet.html"> 2.700.000 vnđ</a>
-                            <a href=""> <button> Mua Ngay </button></a>
+                            <a> <button onclick="addCart(1)"> Mua Ngay </button></a>
                         </Div>
                     </div>
                     <!-- 3 -->
@@ -261,7 +261,7 @@
                         </a>
                         <Div class="Gia">
                             <a href="ChiTiet.html"> 2.300.000 vnđ</a>
-                            <a href="ChiTiet.html"> <button> Mua Ngay </button></a>
+                            <a> <button onclick="addCart(2)"> Mua Ngay </button></a>
                         </Div>
                     </div>
 
