--- a/ChiTiet.html
+++ b/ChiTiet.html
@@ -25,7 +25,7 @@
             <div class="thanhTK">
                 <input type="text" placeholder="Tìm kiếm nè...">
                 <a href=""> <i class="fa-solid fa-magnifying-glass"></i></a>
-                <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+                <a class="icon" href="GioHang.html"><i class="fa-solid fa-cart-shopping"></i></a>
             </div>
 
 
@@ -170,7 +170,7 @@
                 </div>
                 <div class="nut">
 
-                    <a href=""><button> Mua Ngay </button></a>
+                    <a> <button onclick="addCart(0)"> Mua Ngay </button></a>
                     <a href=""><button> <i class="fa-solid fa-cart-shopping"></i> Thêm vào giỏ hàng</button> </a>
 
                 </div>
@@ -309,7 +309,7 @@
                         </a>
                         <Div class="Gia">
                             <a href="ChiTiet.html"> 1.500.000 vnđ</a>
-                            <a href="ChiTiet.html"> <button> Mua Ngay </button></a>
+                            <a> <button onclick="addCart(0)"> Mua Ngay </button></a>
                         </Div>                        
                     </div>
                     <!-- 2 -->
@@ -711,7 +711,7 @@
 
 
 
-
+    <script src="./JS/GioHang.js"></script>
 </body>
 
 </html>
