--- a/GioHang.html
+++ b/GioHang.html
@@ -87,7 +87,7 @@
 
 
             <Li class="menu-ndung">
-                <a class="color" href="tintuc.html">Tin Tức </a>
+                <a class="color" href="chocanh.html">Tin Tức </a>
                 <ul>
                     <li><a href=""> Tin Tức Thú Cưng</a></li>
                     <LI><a href=""> Thông tin về Cats Love Shop</a></LI>
