--- a/chocanh.html
+++ b/chocanh.html
@@ -85,7 +85,7 @@
 
 
             <Li class="menu-ndung">
-                <a class="color" href="tintuc.html">Tin Tức </a>
+                <a class="color" href="chocanh.html">Tin Tức </a>
                 <ul>
                     <li><a href=""> Tin Tức Thú Cưng</a></li>
                     <LI><a href=""> Thông tin về Cats Love Shop</a></LI>
@@ -103,10 +103,6 @@
                     <LI><a href=""><i class="fa-solid fa-phone"></i> Zalo </a></LI>
                 </ul>
             </Li>
-
-
-
-
         </ul>
         <!-- Link trang -->
         <div class="trang">
@@ -115,16 +111,13 @@
                 <div><i class="fa-solid fa-chevron-right"></i></div>
             </a>
             <a href="chocanh.html"> Chó Cảnh</a>
-
         </div>
-
         <!-- Danh mục sản phẩm -->
         <!-- Alaska-->
         <section>
             <div class="tieu-bieu">
                 <h1 class="danhmuc"> <a class="color-danhmuc" href="#"></a>ALASKA </h1>
             </div>
-
             <div class="content">
                 <div class="menu-con">
                     <H1>Chó Cảnh</H1>
