--- a/index.HTML
+++ b/index.HTML
@@ -83,7 +83,7 @@
                 </ul>
             </li>
             <Li class="menu-ndung">
-                <a class="color" href="tintuc.html">Tin Tức </a>
+                <a class="color" href="chocanh.html">Tin Tức </a>
                 <ul>
                     <li><a href=""> Tin Tức Thú Cưng</a></li>
                     <LI><a href=""> Thông tin về Cats Love Shop</a></LI>
@@ -146,7 +146,7 @@
                         </ul>
                     </li>
                     <Li class="menu-ndung-doc">
-                        <a class="color-doc" href="#">Tin Tức </a>
+                        <a class="color-doc" href="chocanh.html">Tin Tức </a>
                         <ul>
                             <li><a href=""> Tin Tức Thú Cưng</a></li>
                             <LI><a href=""> Thông tin về Cats Love Shop</a></LI>
